[package]
name = "westem"
version = "0.1.0"
edition = "2021"
authors = ["RickFerrDev <rickferrdev@gmail.com>"]
description = "This is a simple calculator program written in Rust that performs basic arithmetic operations. It takes three command-line arguments: the left operand, the operator, and the right operand. The program then calculates the result of the operation and prints it to the console."
documentation = "https://docs.rs/westem"
readme = "docs/README.md"
homepage = "https://github.com/RickFerrDev/westem"
repository = "https://github.com/RickFerrDev/westem"
license = "MIT"
keywords = [""]
categories = [""]

[[bin]]
name = "westem"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
